@@ -2,6 +2,8 @@
 	* HilbertArray.fidelity
 	* HilbertSpace.random_povm_element
 	* experimental: non-commutative graphs
+	* fixes for the way TensorSubspace deals with dtype, etc.
+	* CP_Map.krauses
 
 === qitensor-0.11 (Dan Stahlke, 2013-05-11) ===
 	* superoperators module
